Subiendo mejoras para el Backoffice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.datasource.hikari.max-lifetime=${SPRING_DATASOURCE_HIKARI_MAX_LIFETIME:20
 # Configuración JWT
 security.jwt.secret=MI_CLAVE_SECRETA_SUPER_SEGURA
 security.jwt.expiration=86400000
+security.jwt.issuer=artiles-photography
 
 # Actuator para monitoreo
 management.endpoints.web.exposure.include=health,info,metrics,env,beans
@@ -49,6 +50,10 @@ spring.cache.type=caffeine
 cloudinary.cloud-name=dxl74pu2l
 cloudinary.api-key=298346514227718
 cloudinary.api-secret=0zDVk2QDAUKjnk8B2uT438jbOaU
+
+# Configuración de Tamaño Máximo de Archivo
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 
 # Formato de fechas
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
