Agregando mejora al tema de Autenticacion y gestion de Usuarios y Roles, y tambien mejora de exceptiones.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,8 @@ logging.level.org.springframework.boot=DEBUG
 logging.level.com.cloudinary=DEBUG
 logging.level.com.zaxxer.hikari=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
 # Configuración de Spring JPA
 spring.jpa.open-in-view=false
@@ -63,3 +65,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Santo_Domingo
 spring.web.cors.allowed-origins=http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+
+
+
