--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,70 +1,128 @@
 spring.application.name=artiles-photography-backend
 
+# ========================
 # Configuración de Base de Datos
+# ========================
 spring.datasource.url=jdbc:mysql://springedgero.duckdns.org:6436/photography_db?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${DB_USERNAME:arojas}
 spring.datasource.password=${DB_PASSWORD:@Emulador1}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ========================
 # Configuración de Hibernate (ORM)
-# Desactivar ddl-auto para que Flyway gestione el esquema
+# ========================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 hibernate.dialect=${DB_PLATFORM:org.hibernate.dialect.MySQLDialect}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.open-in-view=false
 
-# Configuración de Hikari (Pool de conexiones)
-spring.datasource.hikari.minimum-idle=${SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE:5}
-spring.datasource.hikari.idle-timeout=${SPRING_DATASOURCE_HIKARI_IDLE_TIMEOUT:30000}
-spring.datasource.hikari.maximum-pool-size=${SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE:10}
-spring.datasource.hikari.max-lifetime=${SPRING_DATASOURCE_HIKARI_MAX_LIFETIME:2000000}
+# ========================
+# Pool de Conexiones Hikari
+# ========================
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.connection-timeout=30000
 
+# ========================
 # Configuración JWT
+# ========================
 security.jwt.secret=MI_CLAVE_SECRETA_SUPER_SEGURA
 security.jwt.expiration=86400000
 security.jwt.issuer=artiles-photography
 
+# ========================
 # Actuator para monitoreo
-management.endpoints.web.exposure.include=health,info,metrics,env,beans
+# ========================
+management.endpoints.web.exposure.include=health,info,metrics,env,beans,loggers
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.metrics.enable.jdbc=true
+management.metrics.enable.hikaricp=true
 
+# ========================
 # Configuración de Logging
+# ========================
 logging.level.root=${LOGGING_LEVEL_ROOT:WARN}
 logging.file.name=${LOGGING_FILE_NAME:logs/application.log}
-logging.level.org.hibernate.SQL=${LOGGING_LEVEL_ORG_HIBERNATE_SQL:DEBUG}
-logging.level.org.hibernate.type=${LOGGING_LEVEL_ORG_HIBERNATE_TYPE:TRACE}
-logging.logback.rollingpolicy.max-history=${LOGGING_MAX_HISTORY:30}
-logging.logback.rollingpolicy.max-file-size=${LOGGING_MAX_FILE_SIZE:10MB}
-logging.pattern.console=${LOGGING_PATTERN_CONSOLE:%d{yyyy-MM-dd HH:mm:ss} - %msg%n}
+
+# SQL generado por Hibernate
+logging.level.org.hibernate.SQL=DEBUG
+
+# Mostrar parámetros de SQL (bind variables)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Logging de Hibernate
+logging.level.org.hibernate.type=TRACE
+
+# Logging detallado de Spring y componentes relacionados
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.boot=DEBUG
-logging.level.com.cloudinary=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
 
-# Configuración de Spring JPA
-spring.jpa.open-in-view=false
-spring.cache.type=caffeine
+# Logging de Cloudinary
+logging.level.com.cloudinary=DEBUG
 
+# Logging detallado de HikariCP
+logging.level.com.zaxxer.hikari=DEBUG
+
+# Monitorear todas las conexiones a la base de datos
+logging.level.org.springframework.jdbc.datasource.DriverManagerDataSource=TRACE
+
+# Patrón del log en consola
+logging.pattern.console=${LOGGING_PATTERN_CONSOLE:%d{yyyy-MM-dd HH:mm:ss} - %msg%n}
+
+# Rolling Policy
+logging.logback.rollingpolicy.max-history=${LOGGING_MAX_HISTORY:30}
+logging.logback.rollingpolicy.max-file-size=${LOGGING_MAX_FILE_SIZE:10MB}
+
+# ========================
 # Configuración de Cloudinary
+# ========================
 cloudinary.cloud-name=dxl74pu2l
 cloudinary.api-key=298346514227718
 cloudinary.api-secret=0zDVk2QDAUKjnk8B2uT438jbOaU
 
+# ========================
 # Configuración de Tamaño Máximo de Archivo
+# ========================
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
-# Formato de fechas
+# ========================
+# Formato de fechas y zonas horarias
+# ========================
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
 spring.jackson.time-zone=America/Santo_Domingo
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Santo_Domingo
 
-spring.web.cors.allowed-origins=http://localhost:3000
+# ========================
+# Configuración CORS
+# ========================
+spring.web.cors.allowed-origins=http://localhost:3000/, http://localhost:5173/
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
+# ========================
+# Configuración de Caché
+# ========================
+spring.cache.type=caffeine
 
+# ========================
+# Compresión HTTP
+# ========================
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+server.compression.min-response-size=1024
 
+# ========================
+# Codificación
+# ========================
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
+spring.jpa.properties.hibernate.generate_statistics=true
