Agregando nuevos flujos y rastreo de los logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,79 +12,43 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Configuración de Hibernate (ORM)
 # ========================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-hibernate.dialect=${DB_PLATFORM:org.hibernate.dialect.MySQLDialect}
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.open-in-view=false
 
 # ========================
 # Pool de Conexiones Hikari
 # ========================
 spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.leak-detection-threshold=60000
 
 # ========================
 # Configuración JWT
 # ========================
-security.jwt.secret=MI_CLAVE_SECRETA_SUPER_SEGURA
+security.jwt.secret=${JWT_SECRET:MI_CLAVE_SECRETA_SUPER_SEGURA}
 security.jwt.expiration=86400000
 security.jwt.issuer=artiles-photography
 
 # ========================
 # Actuator para monitoreo
 # ========================
-management.endpoints.web.exposure.include=health,info,metrics,env,beans,loggers
-management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
 management.endpoint.metrics.enabled=true
 management.metrics.enable.jdbc=true
 management.metrics.enable.hikaricp=true
-
-# ========================
-# Configuración de Logging
-# ========================
-logging.level.root=${LOGGING_LEVEL_ROOT:WARN}
-logging.file.name=${LOGGING_FILE_NAME:logs/application.log}
-
-# SQL generado por Hibernate
-logging.level.org.hibernate.SQL=DEBUG
-
-# Mostrar parámetros de SQL (bind variables)
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# Logging de Hibernate
-logging.level.org.hibernate.type=TRACE
-
-# Logging detallado de Spring y componentes relacionados
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.boot=DEBUG
-logging.level.org.springframework=DEBUG
-
-# Logging de Cloudinary
-logging.level.com.cloudinary=DEBUG
-
-# Logging detallado de HikariCP
-logging.level.com.zaxxer.hikari=DEBUG
-
-# Monitorear todas las conexiones a la base de datos
-logging.level.org.springframework.jdbc.datasource.DriverManagerDataSource=TRACE
-
-# Patrón del log en consola
-logging.pattern.console=${LOGGING_PATTERN_CONSOLE:%d{yyyy-MM-dd HH:mm:ss} - %msg%n}
-
-# Rolling Policy
-logging.logback.rollingpolicy.max-history=${LOGGING_MAX_HISTORY:30}
-logging.logback.rollingpolicy.max-file-size=${LOGGING_MAX_FILE_SIZE:10MB}
+management.endpoints.web.exposure.exclude=env,beans,loggers
 
 # ========================
 # Configuración de Cloudinary
 # ========================
-cloudinary.cloud-name=dxl74pu2l
-cloudinary.api-key=298346514227718
-cloudinary.api-secret=0zDVk2QDAUKjnk8B2uT438jbOaU
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME:dxl74pu2l}
+cloudinary.api-key=${CLOUDINARY_API_KEY:298346514227718}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET:0zDVk2QDAUKjnk8B2uT438jbOaU}
 
 # ========================
 # Configuración de Tamaño Máximo de Archivo
@@ -104,12 +68,13 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Santo_Domingo
 # ========================
 spring.web.cors.allowed-origins=http://localhost:3000/, http://localhost:5173/
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+spring.web.cors.allowed-headers=Authorization,Content-Type
 
 # ========================
 # Configuración de Caché
 # ========================
 spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=3600s
 
 # ========================
 # Compresión HTTP
@@ -124,5 +89,11 @@ server.compression.min-response-size=1024
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+java.nio.charset.Charset.defaultCharset=UTF-8
 
-spring.jpa.properties.hibernate.generate_statistics=true
+# ========================
+# Seguridad adicional
+# ========================
+server.error.include-stacktrace=never
+server.error.include-message=never
+spring.jpa.properties.hibernate.generate_statistics=false
