--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
+# ========================
+# Nombre de la Aplicación y Puerto del Servidor
+# ========================
 spring.application.name=artiles-photography-backend
+server.port=8080
 
 # ========================
 # Configuración de Base de Datos
 # ========================
-spring.datasource.url=jdbc:mysql://springedgero.duckdns.org:6436/photography_db?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=${DB_USERNAME:arojas}
+# spring.datasource.url=jdbc:mysql://springedgero.duckdns.org:6436/photography_db?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+# spring.datasource.username=${DB_USERNAME:arojas}
+# spring.datasource.password=${DB_PASSWORD:@Emulador1}
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://Anthony-Laptop:3306/photography_db?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:@Emulador1}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -15,6 +24,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Santo_Domingo
+spring.jpa.properties.hibernate.generate_statistics=false
 
 # ========================
 # Pool de Conexiones Hikari
@@ -34,44 +45,43 @@ security.jwt.expiration=86400000
 security.jwt.issuer=artiles-photography
 
 # ========================
-# Actuator para monitoreo
+# Actuator y Métricas
 # ========================
 management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.exposure.exclude=env,beans,loggers
 management.endpoint.health.show-details=when-authorized
 management.endpoint.metrics.enabled=true
 management.metrics.enable.jdbc=true
 management.metrics.enable.hikaricp=true
-management.endpoints.web.exposure.exclude=env,beans,loggers
 
 # ========================
-# Configuración de Cloudinary
+# Cloudinary
 # ========================
 cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME:dxl74pu2l}
 cloudinary.api-key=${CLOUDINARY_API_KEY:298346514227718}
 cloudinary.api-secret=${CLOUDINARY_API_SECRET:0zDVk2QDAUKjnk8B2uT438jbOaU}
 
 # ========================
-# Configuración de Tamaño Máximo de Archivo
+# Tamaño Máximo de Archivos
 # ========================
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
 # ========================
-# Formato de fechas y zonas horarias
+# Formato de Fecha y Zona Horaria
 # ========================
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss
 spring.jackson.time-zone=America/Santo_Domingo
-spring.jpa.properties.hibernate.jdbc.time_zone=America/Santo_Domingo
 
 # ========================
-# Configuración CORS
+# CORS (Frontend URLs permitidas)
 # ========================
-spring.web.cors.allowed-origins=http://localhost:3000/, http://localhost:5173/
+spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:5173
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=Authorization,Content-Type
 
 # ========================
-# Configuración de Caché
+# Caché (Caffeine)
 # ========================
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=3600s
@@ -84,16 +94,18 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 server.compression.min-response-size=1024
 
 # ========================
-# Codificación
+# Codificación y Charset
 # ========================
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
-java.nio.charset.Charset.defaultCharset=UTF-8
 
 # ========================
-# Seguridad adicional
+# Manejo de Errores
 # ========================
-server.error.include-stacktrace=never
-server.error.include-message=never
-spring.jpa.properties.hibernate.generate_statistics=false
+# En producción, lo ideal es dejar esto como "never"
+server.error.include-message=ALWAYS
+server.error.include-binding-errors=ALWAYS
+server.error.include-stacktrace=ALWAYS
+logging.level.com.artiles_photography_backend=DEBUG
+logging.level.org.springframework.security=DEBUG
