--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,14 @@ server.port=8080
 # Configuración de Base de Datos
 # ========================
 # spring.datasource.url=jdbc:mysql://springedgero.duckdns.org:6436/photography_db?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-# spring.datasource.username=${DB_USERNAME:arojas}
 # spring.datasource.password=${DB_PASSWORD:@Emulador1}
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.username=${DB_USERNAME:arojas}
 
-spring.datasource.url=jdbc:mysql://Anthony-Laptop:3306/photography_db?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/photography_db?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:@Emulador1}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ========================
 # Configuración de Hibernate (ORM)
@@ -50,7 +50,7 @@ security.jwt.issuer=artiles-photography
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoints.web.exposure.exclude=env,beans,loggers
 management.endpoint.health.show-details=when-authorized
-management.endpoint.metrics.enabled=true
+management.endpoint.metrics.access=read-only
 management.metrics.enable.jdbc=true
 management.metrics.enable.hikaricp=true
 
@@ -64,6 +64,7 @@ cloudinary.api-secret=${CLOUDINARY_API_SECRET:0zDVk2QDAUKjnk8B2uT438jbOaU}
 # ========================
 # Tamaño Máximo de Archivos
 # ========================
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
@@ -96,9 +97,9 @@ server.compression.min-response-size=1024
 # ========================
 # Codificación y Charset
 # ========================
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 
 # ========================
 # Manejo de Errores
