--- a/pom.xml
+++ b/pom.xml
@@ -1,183 +1,213 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.5</version>
-		<relativePath/>
-		<!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.artilesphotography</groupId>
-	<artifactId>artiles-photography-backend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>artiles-photography-backend</name>
-	<description>Backend for Artiles Photography Studio</description>
-	<!-- URL del proyecto, apuntando al repositorio GitHub -->
-	<url>https://github.com/AntRed1/artiles-photography-backend</url>
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!-- Versión del modelo de Maven -->
+    <modelVersion>4.0.0</modelVersion>
 
-	<!-- Licencia MIT del proyecto -->
-	<licenses>
-		<license>
-			<name>MIT License</name>
-			<url>https://github.com/AntRed1/artiles-photography-backend/blob/master/LICENSE</url>
-			<distribution>repo</distribution>
-			<comments>Permite uso, copia, modificación y distribución bajo los términos de la licencia MIT.</comments>
-		</license>
-	</licenses>
+    <!-- Parent POM de Spring Boot para gestionar dependencias y configuraciones -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <!-- Actualizado a 3.3.5; -->
+        <version>3.3.5</version>
+        <relativePath />
+    </parent>
 
-	<!-- Información de los desarrolladores -->
-	<developers>
-		<developer>
-			<name>Anthony Rojas</name>
-			<email>anthonyatras@gmail.com</email>
-			<roles>
-				<role>Lead Developer</role>
-			</roles>
-			<timezone>America/Santo_Domingo</timezone>
-		</developer>
-	</developers>
+    <!-- Identificadores del proyecto -->
+    <groupId>com.artilesphotography</groupId>
+    <artifactId>artiles-photography-backend</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>artiles-photography-backend</name>
+    <description>Backend para Artiles Photography Studio</description>
+    <url>https://github.com/AntRed1/artiles-photography-backend</url>
 
-	<!-- Configuración del control de versiones (SCM) -->
-	<scm>
-		<connection>scm:git:git://github.com/AntRed1/artiles-photography-backend.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/AntRed1/artiles-photography-backend.git</developerConnection>
-		<tag>HEAD</tag>
-		<url>https://github.com/AntRed1/artiles-photography-backend</url>
-	</scm>
+    <!-- Licencia MIT del proyecto -->
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://github.com/AntRed1/artiles-photography-backend/blob/master/LICENSE</url>
+            <distribution>repo</distribution>
+            <comments>Permite uso, copia, modificación y distribución bajo los términos de la
+                licencia MIT.</comments>
+        </license>
+    </licenses>
 
-	<properties>
-		<java.version>21</java.version>
-	</properties>
+    <!-- Información del desarrollador principal -->
+    <developers>
+        <developer>
+            <name>Anthony Rojas</name>
+            <email>anthonyatras@gmail.com</email>
+            <roles>
+                <role>Lead Developer</role>
+            </roles>
+            <timezone>America/Santo_Domingo</timezone>
+        </developer>
+    </developers>
 
-	<dependencies>
-		<!-- Spring Boot Actuator -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+    <!-- Configuración del control de versiones (SCM) -->
+    <scm>
+        <connection>scm:git:git://github.com/AntRed1/artiles-photography-backend.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/AntRed1/artiles-photography-backend.git</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://github.com/AntRed1/artiles-photography-backend</url>
+    </scm>
 
-		<!-- Spring Data JPA -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+    <!-- Propiedades del proyecto -->
+    <properties>
+        <!-- Alineado con Java 17 para consistencia con imágenes Docker -->
+        <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 
-		<!-- Spring Boot Web -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+    <!-- Dependencias del proyecto -->
+    <dependencies>
+        <!-- Spring Boot Actuator para monitoreo y métricas -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
-		<!-- Spring Boot DevTools -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
+        <!-- Spring Data JPA para interacción con bases de datos -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
-		<!-- MySQL Connector -->
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+        <!-- Spring Boot Web para aplicaciones web REST -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
-		<!-- Lombok -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
-		</dependency>
+        <!-- DevTools para desarrollo (recarga automática, etc.) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
 
-		<!-- Testing -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <!-- Conector MySQL para la base de datos -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
-		<!-- Validación -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
+        <!-- Lombok para reducir código boilerplate -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
-		<!-- Jackson -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
+        <!-- Dependencias de prueba -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-		<!-- Caffeine -->
-		<dependency>
-			<groupId>com.github.ben-manes.caffeine</groupId>
-			<artifactId>caffeine</artifactId>
-		</dependency>
+        <!-- Validación de datos (e.g., @NotNull, @Size) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
-		<!-- Cloudinary -->
-		<dependency>
-			<groupId>com.cloudinary</groupId>
-			<artifactId>cloudinary-http44</artifactId>
-			<version>1.38.0</version>
-		</dependency>
+        <!-- Jackson para serialización/deserialización JSON -->
+        <!-- Sin versión explícita para usar la gestionada por Spring Boot -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
-		<!-- Apache HttpClient -->
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.14</version>
-		</dependency>
+        <!-- Caffeine para caché en memoria -->
+        <!-- Sin versión explícita para usar la gestionada por Spring Boot -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
 
-		<!-- Spring Security -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+        <!-- Cloudinary para gestión de imágenes en la nube -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.38.0</version>
+        </dependency>
 
-		<!-- Java JWT -->
-		<dependency>
-			<groupId>com.auth0</groupId>
-			<artifactId>java-jwt</artifactId>
-			<version>4.4.0</version>
-		</dependency>
+        <!-- Apache HttpClient para peticiones HTTP -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-logging</artifactId>
-		</dependency>
+        <!-- Spring Security para autenticación y autorización -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
-	</dependencies>
+        <!-- Java JWT para manejo de tokens JWT -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <!-- Actualizado a la última versión estable -->
+            <version>4.5.0</version>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <!-- Configuración del build -->
+    <build>
+        <plugins>
+            <!-- Plugin de compilación para soportar Lombok -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
 
+            <!-- Plugin de Spring Boot para empaquetar la aplicación -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+            <!-- Plugin de Dependency-Check para análisis de vulnerabilidades -->
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>12.1.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <suppressionFiles>
+                        <suppressionFile>${project.basedir}/dependency-check-suppressions.xml</suppressionFile>
+                    </suppressionFiles>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
