--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,7 +77,7 @@ spring.jackson.time-zone=America/Santo_Domingo
 # ========================
 # CORS (Frontend URLs permitidas)
 # ========================
-spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:5173
+spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:5173,http://localhost/
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=Authorization,Content-Type
 
